...
            }
        }
        
        let optionsAlert = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        optionsAlert.addAction(segueAction(title: "Scan Barcode", identifier: "scanBarcode"))
        optionsAlert.addAction(segueAction(title: "Search Online", identifier: "searchByText"))
        optionsAlert.addAction(segueAction(title: "Enter Manually", identifier: "addManually"))
        optionsAlert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
        
        // For iPad, set the popover presentation controller's source
        if let popPresenter = optionsAlert.popoverPresentationController {
            popPresenter.barButtonItem = addButton
        }
...
        finishedTabView.isHidden = tabOption != .finished
        settingsTabView.isHidden = tabOption != .settings
        
        // Configure the navigation item
        switch tabOption {
        case .toRead:
            navigationItem.title = "Reading"
            navigationItem.rightBarButtonItem = addButton
            navigationItem.leftBarButtonItem = editButton
        case .finished:
            navigationItem.title = "Finished"
            navigationItem.rightBarButtonItem = addButton
            navigationItem.leftBarButtonItem = editButton
...
