...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="FnG-ul-ELW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Manually" id="nor-8A-rvp">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="c2i-Fh-44q">
                            <connections>
                                <action selector="cancelButtonWasPressed:" destination="rUB-7G-Ab3" id="ko5-Sr-qpL"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Next" id="QTN-8Z-LoW" userLabel="Next Button">
                            <connections>
                                <action selector="doneButtonWasPressed:" destination="rUB-7G-Ab3" id="Cyw-3T-aEs"/>
                                <segue destination="0jr-ny-ULh" kind="show" identifier="addManuallyNextSegue" id="QzB-np-CwK">
                                    <nil key="action"/>
                                </segue>
                            </connections>
...
